// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssemblNavbar component should render a BurgerNavbar and a hidden FlatNavbar with a tiny screenWidth 1`] = `
<div
  className="background-light"
>
  <Uncontrolled(Navbar)
    bsStyle="default"
    className="no-padding"
    fixedTop={true}
    fluid={true}
  >
    <div
      className="nav-bar max-container"
      id="navbar"
    >
      <BurgerNavbar
        elements={
          Array [
            <SectionLink
              options={
                  Object {
                      "phase": "thread",
                      "phaseContext": "new",
                      "screenTooSmall": true,
                      "slug": undefined,
                    }
              }
              section={
                  Object {
                      "id": "mysection",
                      "sectionType": "CUSTOM",
                      "title": "My section",
                      "url": "http://www.gnu.org",
                    }
              }
          />,
          ]
        }
        helpUrl={undefined}
        location={undefined}
        logoLink="http://www.homesweethome.org"
        logoSrc={undefined}
        slug={undefined}
      />
      <FlatNavbar
        elements={
          Array [
            <SectionLink
              options={
                  Object {
                      "phase": "thread",
                      "phaseContext": "new",
                      "screenTooSmall": true,
                      "slug": undefined,
                    }
              }
              section={
                  Object {
                      "id": "mysection",
                      "sectionType": "CUSTOM",
                      "title": "My section",
                      "url": "http://www.gnu.org",
                    }
              }
          />,
          ]
        }
        helpUrl={undefined}
        isLargeLogo={undefined}
        location={undefined}
        logoLink="http://www.homesweethome.org"
        logoSrc={undefined}
        maxWidth={-20}
        setWidth={[Function]}
        slug={undefined}
        style={
          Object {
            "opacity": 0,
            "position": "absolute",
            "top": "-200px",
          }
        }
        themeId={undefined}
      />
    </div>
  </Uncontrolled(Navbar)>
</div>
`;

exports[`AssemblNavbar component should render a FlatNavbar with a big screenWidth 1`] = `
<div
  className="background-light"
>
  <Uncontrolled(Navbar)
    bsStyle="default"
    className="no-padding"
    fixedTop={true}
    fluid={true}
  >
    <div
      className="nav-bar max-container"
      id="navbar"
    >
      <FlatNavbar
        elements={
          Array [
            <SectionLink
              options={
                  Object {
                      "phase": "thread",
                      "phaseContext": "new",
                      "screenTooSmall": false,
                      "slug": undefined,
                    }
              }
              section={
                  Object {
                      "id": "mysection",
                      "sectionType": "CUSTOM",
                      "title": "My section",
                      "url": "http://www.gnu.org",
                    }
              }
          />,
          ]
        }
        helpUrl={undefined}
        isLargeLogo={undefined}
        location={undefined}
        logoLink="http://www.homesweethome.org"
        logoSrc={undefined}
        maxWidth={1370}
        setWidth={[Function]}
        slug={undefined}
        style={Object {}}
        themeId={undefined}
      />
    </div>
  </Uncontrolled(Navbar)>
</div>
`;

exports[`mapSectionToElement function should return a SectionLink element that matches the snapshot 1`] = `
<SectionLink
  options={
    Object {
      "phase": "fake_phase",
      "slug": "fake_slug",
    }
  }
  section={
    Object {
      "sectionType": "DEBATE",
      "title": "fake_title",
    }
  }
/>
`;
